yacc.output
Terminals which are not used

   EXPECT
   TRUE
   FALSE
   XOR
   XNOT
   NEW_LINE
   FLOOR
   stmt_5


State 133 conflicts: 1 reduce/reduce
State 187 conflicts: 1 reduce/reduce
State 263 conflicts: 1 reduce/reduce
State 293 conflicts: 1 reduce/reduce
State 319 conflicts: 1 reduce/reduce
State 354 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: units DOT

    2 units: units unit
    3      | unit

    4 unit: IMPORT import_list class_decl
    5     | IMPORT ID class_decl
    6     | IMPORT ID DOT ID class_decl
    7     | class_decl

    8 class_decl: class_h class_body

    9 class_h: CLASS ID SEMI_COLUMN
   10        | CLASS ID OPEN_S CLOSE_S SEMI_COLUMN
   11        | CLASS ID OPEN_S inherted_list CLOSE_S SEMI_COLUMN
   12        | CLASS SEMI_COLUMN
   13        | ID ID SEMI_COLUMN
   14        | ID SEMI_COLUMN
   15        | CLASS ID

   16 inherted_list: inherted_list COMMA ID
   17              | ID

   18 expr_list: expr_list COMMA expr
   19          | expr

   20 import_list: import_list COMMA import
   21            | ID DOT ID COMMA import
   22            | import_list COMMA ID DOT ID
   23            | import_list COMMA ID
   24            | ID DOT ID COMMA ID DOT ID
   25            | ID DOT ID COMMA ID
   26            | ID COMMA import
   27            | ID COMMA ID DOT ID
   28            | ID COMMA ID
   29            | import

   30 import: import DOT ID
   31       | ID DOT ID DOT ID

   32 class_body: END
   33           | dm_list END

   34 dm_list: dm_list DEF dm
   35        | DEF dm
   36        | dm

   37 dm: var_declaration
   38   | method_declaration
   39   | class_decl

   40 var_declaration: access_modef ID
   41                | ID
   42                | access_modef ID ASSIGN expr
   43                | ID ASSIGN expr
   44                | access_modef ID ID
   45                | ID ID

   46 method_declaration: method_h block_stmt

   47 method_h: access_modef ID OPEN_S args_list CLOSE_S SEMI_COLUMN
   48         | access_modef ID OPEN_S ID CLOSE_S SEMI_COLUMN
   49         | ID OPEN_S args_list CLOSE_S SEMI_COLUMN
   50         | ID OPEN_S ID CLOSE_S SEMI_COLUMN
   51         | access_modef ID OPEN_S CLOSE_S SEMI_COLUMN
   52         | ID OPEN_S CLOSE_S SEMI_COLUMN
   53         | access_modef OPEN_S args_list CLOSE_S SEMI_COLUMN
   54         | OPEN_S args_list CLOSE_S SEMI_COLUMN
   55         | access_modef ID args_list CLOSE_S SEMI_COLUMN
   56         | access_modef ID OPEN_S args_list SEMI_COLUMN
   57         | access_modef ID OPEN_S args_list CLOSE_S

   58 args_list: args_list COMMA arg
   59          | ID COMMA arg
   60          | args_list COMMA ID
   61          | ID COMMA ID
   62          | arg

   63 arg: STAR ID
   64    | ID ASSIGN expr
   65    | STAR ID ASSIGN expr

   66 block_stmt: _BEGIN END
   67           | _BEGIN stmt_list END

   68 stmt_list: stmt_list stmt
   69          | stmt

   70 stmt: if_stmt
   71     | while_stmt
   72     | for_stmt
   73     | try_stmt
   74     | with_stmt
   75     | block_stmt
   76     | simple_stmt_list

   77 if_stmt: if_header stmt
   78        | if_header stmt ELSE stmt
   79        | if_header stmt elif_stmt
   80        | if_header stmt elif_stmt ELSE stmt

   81 elif_stmt: elif_header stmt elif_stmt
   82          | elif_header stmt

   83 if_header: IF expr SEMI_COLUMN
   84          | IF expr

   85 elif_header: ELIF expr SEMI_COLUMN

   86 while_stmt: while_header stmt

   87 while_header: WHILE expr SEMI_COLUMN
   88             | ID expr SEMI_COLUMN
   89             | WHILE expr

   90 for_stmt: for_header stmt

   91 for_header: FOR target_list IN expr_list
   92           | FOR ID COMMA ID IN expr_list
   93           | FOR ID IN expr_list
   94           | ID target_list IN expr_list

   95 target_list: target_list COMMA target
   96            | ID COMMA ID COMMA target
   97            | target_list COMMA ID
   98            | ID COMMA ID COMMA ID
   99            | ID COMMA target
  100            | target

  101 try_stmt: TRY SEMI_COLUMN stmt except_stmt
  102         | TRY SEMI_COLUMN stmt finally_stmt
  103         | TRY SEMI_COLUMN block_stmt except_stmt
  104         | TRY SEMI_COLUMN block_stmt finally_stmt

  105 finally_stmt: FINALLY SEMI_COLUMN block_stmt

  106 except_stmt: EXCEPT SEMI_COLUMN stmt
  107            | EXCEPT SEMI_COLUMN expr stmt

  108 with_stmt: WITH expr SEMI_COLUMN
  109          | WITH expr AS target SEMI_COLUMN

  110 simple_stmt_list: expr_list
  111                 | assert_stmt
  112                 | assignment_stmt
  113                 | PASS
  114                 | del_stmt
  115                 | print_stmt
  116                 | return_stmt
  117                 | yield_stmt
  118                 | raise_stmt
  119                 | BREAK
  120                 | CONTINUE
  121                 | import_list
  122                 | global_stmt

  123 assert_stmt: ASSERT expr
  124            | ASSERT expr COMMA expr

  125 assignment_stmt: target_list EQUAL expr_list
  126                | ID COMMA ID EQUAL expr_list
  127                | ID EQUAL expr_list
  128                | target_list EQUAL yield_expression
  129                | ID COMMA ID EQUAL yield_expression
  130                | ID EQUAL yield_expression

  131 del_stmt: DEL target_list
  132         | DEL ID COMMA ID
  133         | DEL ID

  134 return_stmt: RETURN
  135            | RETURN expr_list

  136 yield_stmt: yield_expression

  137 print_stmt: PRINT expr_list
  138           | PRINT MORE_THAN MORE_THAN expr_list
  139           | ID expr_list

  140 global_stmt: GLOBAL id_list
  141            | GLOBAL

  142 id_list: ID COMMA id_list
  143        | ID

  144 raise_stmt: RAISE
  145           | RAISE expr
  146           | RAISE expr COMMA expr
  147           | RAISE expr COMMA

  148 access_modef: PRIVATE
  149             | PUBLIC
  150             | PROTECTED

  151 target: OPEN_S target_list CLOSE_S
  152       | OPEN_S ID COMMA ID CLOSE_S
  153       | OPEN_S ID CLOSE_S
  154       | OPEN_D target_list CLOSE_D
  155       | OPEN_D ID COMMA ID CLOSE_D
  156       | OPEN_D ID CLOSE_D
  157       | attributeref
  158       | subscription

  159 attributeref: primary DOT ID
  160             | ID DOT ID

  161 primary: atom
  162        | attributeref
  163        | subscription
  164        | call

  165 atom: literal
  166     | enclosure

  167 literal: STRING_VALUE
  168        | INTEGER_VALUE
  169        | LONG_VALUE
  170        | FLOAT_VALUE
  171        | CHAR_VALUE

  172 enclosure: parenth_form
  173          | list_display
  174          | string_conversion
  175          | yield_atom

  176 parenth_form: OPEN_S expr CLOSE_S
  177             | OPEN_S CLOSE_S
  178             | OPEN_S expr
  179             | OPEN_S
  180             | expr CLOSE_S

  181 list_display: OPEN_D expr_list CLOSE_D

  182 string_conversion: RE_COT expr_list RE_COT

  183 yield_atom: OPEN_S yield_expression CLOSE_S

  184 yield_expression: YIELD
  185                 | YIELD expr_list

  186 subscription: PRIMARY OPEN_D expr_list CLOSE_D

  187 call: PRIMARY OPEN_D args_list CLOSE_D
  188     | PRIMARY OPEN_D ID CLOSE_D

  189 expr: condition
  190     | literal
  191     | expr op expr
  192     | long_id

  193 condition: expr EQUAL expr
  194          | expr NOT_EQUAL expr
  195          | expr LESS_THAN expr
  196          | expr LESS_OR_EQUAL expr
  197          | expr MORE_THAN expr
  198          | expr MORE_OR_EQUAL expr

  199 long_id: ID OPEN_S
  200        | ID OPEN_S CLOSE_S
  201        | ID OPEN_S expr_list CLOSE_S
  202        | ID OPEN_S expr CLOSE_S
  203        | long_id DOT ID
  204        | long_id DOT ID OPEN_S CLOSE_S
  205        | long_id DOT ID OPEN_S expr_list CLOSE_S
  206        | long_id DOT ID OPEN_S expr CLOSE_S

  207 op: PLUS
  208   | MINUS
  209   | DIV
  210   | MOD
  211   | OR
  212   | NOT
  213   | MULTI
  214   | AND


Terminals, with rules where they appear

$end (0) 0
error (256)
IMPORT (258) 4 5 6
CLASS (259) 9 10 11 12 15
ID (260) 5 6 9 10 11 13 14 15 16 17 21 22 23 24 25 26 27 28 30 31 40
    41 42 43 44 45 47 48 49 50 51 52 55 56 57 59 60 61 63 64 65 88
    92 93 94 96 97 98 99 126 127 129 130 132 133 139 142 143 152 153
    155 156 159 160 188 199 200 201 202 203 204 205 206
SEMI_COLUMN (261) 9 10 11 12 13 14 47 48 49 50 51 52 53 54 55 56 83
    85 87 88 101 102 103 104 105 106 107 108 109
CLOSE_S (262) 10 11 47 48 49 50 51 52 53 54 55 57 151 152 153 176 177
    180 183 200 201 202 204 205 206
COMMA (263) 16 18 20 21 22 23 24 25 26 27 28 58 59 60 61 92 95 96 97
    98 99 124 126 129 132 142 146 147 152 155
DOT (264) 1 6 21 22 24 25 27 30 31 159 160 203 204 205 206
_BEGIN (265) 66 67
END (266) 32 33 66 67
DEF (267) 34 35
ASSIGN (268) 42 43 64 65
STAR (269) 63 65
ELSE (270) 78 80
IF (271) 83 84
ELIF (272) 85
WHILE (273) 87 89
FOR (274) 91 92 93
IN (275) 91 92 93 94
TRY (276) 101 102 103 104
FINALLY (277) 105
MULTI (278) 213
EXPECT (279)
WITH (280) 108 109
AS (281) 109
ASSERT (282) 123 124
EQUAL (283) 125 126 127 128 129 130 193
DEL (284) 131 132 133
RETURN (285) 134 135
PRINT (286) 137 138
GLOBAL (287) 140 141
RAISE (288) 144 145 146 147
PRIVATE (289) 148
PUBLIC (290) 149
PROTECTED (291) 150
OPEN_D (292) 154 155 156 181 186 187 188
CLOSE_D (293) 154 155 156 181 186 187 188
RE_COT (294) 182
YIELD (295) 184 185
PRIMARY (296) 186 187 188
OR (297) 211
AND (298) 214
NOT (299) 212
PLUS (300) 207
MINUS (301) 208
DIV (302) 209
MOD (303) 210
NOT_EQUAL (304) 194
LESS_THAN (305) 195
LESS_OR_EQUAL (306) 196
MORE_THAN (307) 138 197
MORE_OR_EQUAL (308) 198
TRUE (309)
FALSE (310)
XOR (311)
XNOT (312)
EXCEPT (313) 106 107
NEW_LINE (314)
PASS (315) 113
CHAR_VALUE (316) 171
OPEN_S (317) 10 11 47 48 49 50 51 52 53 54 56 57 151 152 153 176 177
    178 179 183 199 200 201 202 204 205 206
STRING_VALUE (318) 167
INTEGER_VALUE (319) 168
BREAK (320) 119
CONTINUE (321) 120
LONG_VALUE (322) 169
FLOAT_VALUE (323) 170
FLOOR (324)
stmt_1_2 (325)
stmt_8 (326)
stmt_7 (327)
stmt_6 (328)
stmt_5 (329)
stmt_4 (330)
stmt_3 (331)
stmt_2 (332)
stmt_1 (333)


Nonterminals, with rules where they appear

$accept (79)
    on left: 0
program (80)
    on left: 1, on right: 0
units (81)
    on left: 2 3, on right: 1 2
unit (82)
    on left: 4 5 6 7, on right: 2 3
class_decl (83)
    on left: 8, on right: 4 5 6 7 39
class_h (84)
    on left: 9 10 11 12 13 14 15, on right: 8
inherted_list (85)
    on left: 16 17, on right: 11 16
expr_list (86)
    on left: 18 19, on right: 18 91 92 93 94 110 125 126 127 135 137
    138 139 181 182 185 186 201 205
import_list (87)
    on left: 20 21 22 23 24 25 26 27 28 29, on right: 4 20 22 23 121
import (88)
    on left: 30 31, on right: 20 21 26 29 30
class_body (89)
    on left: 32 33, on right: 8
dm_list (90)
    on left: 34 35 36, on right: 33 34
dm (91)
    on left: 37 38 39, on right: 34 35 36
var_declaration (92)
    on left: 40 41 42 43 44 45, on right: 37
method_declaration (93)
    on left: 46, on right: 38
method_h (94)
    on left: 47 48 49 50 51 52 53 54 55 56 57, on right: 46
args_list (95)
    on left: 58 59 60 61 62, on right: 47 49 53 54 55 56 57 58 60 187
arg (96)
    on left: 63 64 65, on right: 58 59 62
block_stmt (97)
    on left: 66 67, on right: 46 75 103 104 105
stmt_list (98)
    on left: 68 69, on right: 67 68
stmt (99)
    on left: 70 71 72 73 74 75 76, on right: 68 69 77 78 79 80 81 82
    86 90 101 102 106 107
if_stmt (100)
    on left: 77 78 79 80, on right: 70
elif_stmt (101)
    on left: 81 82, on right: 79 80 81
if_header (102)
    on left: 83 84, on right: 77 78 79 80
elif_header (103)
    on left: 85, on right: 81 82
while_stmt (104)
    on left: 86, on right: 71
while_header (105)
    on left: 87 88 89, on right: 86
for_stmt (106)
    on left: 90, on right: 72
for_header (107)
    on left: 91 92 93 94, on right: 90
target_list (108)
    on left: 95 96 97 98 99 100, on right: 91 94 95 97 125 128 131
    151 154
try_stmt (109)
    on left: 101 102 103 104, on right: 73
finally_stmt (110)
    on left: 105, on right: 102 104
except_stmt (111)
    on left: 106 107, on right: 101 103
with_stmt (112)
    on left: 108 109, on right: 74
simple_stmt_list (113)
    on left: 110 111 112 113 114 115 116 117 118 119 120 121 122,
    on right: 76
assert_stmt (114)
    on left: 123 124, on right: 111
assignment_stmt (115)
    on left: 125 126 127 128 129 130, on right: 112
del_stmt (116)
    on left: 131 132 133, on right: 114
return_stmt (117)
    on left: 134 135, on right: 116
yield_stmt (118)
    on left: 136, on right: 117
print_stmt (119)
    on left: 137 138 139, on right: 115
global_stmt (120)
    on left: 140 141, on right: 122
id_list (121)
    on left: 142 143, on right: 140 142
raise_stmt (122)
    on left: 144 145 146 147, on right: 118
access_modef (123)
    on left: 148 149 150, on right: 40 42 44 47 48 51 53 55 56 57
target (124)
    on left: 151 152 153 154 155 156 157 158, on right: 95 96 99 100
    109
attributeref (125)
    on left: 159 160, on right: 157 162
primary (126)
    on left: 161 162 163 164, on right: 159
atom (127)
    on left: 165 166, on right: 161
literal (128)
    on left: 167 168 169 170 171, on right: 165 190
enclosure (129)
    on left: 172 173 174 175, on right: 166
parenth_form (130)
    on left: 176 177 178 179 180, on right: 172
list_display (131)
    on left: 181, on right: 173
string_conversion (132)
    on left: 182, on right: 174
yield_atom (133)
    on left: 183, on right: 175
yield_expression (134)
    on left: 184 185, on right: 128 129 130 136 183
subscription (135)
    on left: 186, on right: 158 163
call (136)
    on left: 187 188, on right: 164
expr (137)
    on left: 189 190 191 192, on right: 18 19 42 43 64 65 83 84 85
    87 88 89 107 108 109 123 124 145 146 147 176 178 180 191 193 194
    195 196 197 198 202 206
condition (138)
    on left: 193 194 195 196 197 198, on right: 189
long_id (139)
    on left: 199 200 201 202 203 204 205 206, on right: 192 203 204
    205 206
op (140)
    on left: 207 208 209 210 211 212 213 214, on right: 191


state 0

    0 $accept: . program $end

    IMPORT  shift, and go to state 1
    CLASS   shift, and go to state 2
    ID      shift, and go to state 3

    program     go to state 4
    units       go to state 5
    unit        go to state 6
    class_decl  go to state 7
    class_h     go to state 8


state 1

    4 unit: IMPORT . import_list class_decl
    5     | IMPORT . ID class_decl
    6     | IMPORT . ID DOT ID class_decl

    ID  shift, and go to state 9

    import_list  go to state 10
    import       go to state 11


state 2

    9 class_h: CLASS . ID SEMI_COLUMN
   10        | CLASS . ID OPEN_S CLOSE_S SEMI_COLUMN
   11        | CLASS . ID OPEN_S inherted_list CLOSE_S SEMI_COLUMN
   12        | CLASS . SEMI_COLUMN
   15        | CLASS . ID

    ID           shift, and go to state 12
    SEMI_COLUMN  shift, and go to state 13


state 3

   13 class_h: ID . ID SEMI_COLUMN
   14        | ID . SEMI_COLUMN

    ID           shift, and go to state 14
    SEMI_COLUMN  shift, and go to state 15


state 4

    0 $accept: program . $end

    $end  shift, and go to state 16


state 5

    1 program: units . DOT
    2 units: units . unit

    IMPORT  shift, and go to state 1
    CLASS   shift, and go to state 2
    ID      shift, and go to state 3
    DOT     shift, and go to state 17

    unit        go to state 18
    class_decl  go to state 7
    class_h     go to state 8


state 6

    3 units: unit .

    $default  reduce using rule 3 (units)


state 7

    7 unit: class_decl .

    $default  reduce using rule 7 (unit)


state 8

    8 class_decl: class_h . class_body

    CLASS      shift, and go to state 2
    ID         shift, and go to state 19
    END        shift, and go to state 20
    DEF        shift, and go to state 21
    PRIVATE    shift, and go to state 22
    PUBLIC     shift, and go to state 23
    PROTECTED  shift, and go to state 24
    OPEN_S     shift, and go to state 25

    class_decl          go to state 26
    class_h             go to state 8
    class_body          go to state 27
    dm_list             go to state 28
    dm                  go to state 29
    var_declaration     go to state 30
    method_declaration  go to state 31
    method_h            go to state 32
    access_modef        go to state 33


state 9

    5 unit: IMPORT ID . class_decl
    6     | IMPORT ID . DOT ID class_decl
   21 import_list: ID . DOT ID COMMA import
   24            | ID . DOT ID COMMA ID DOT ID
   25            | ID . DOT ID COMMA ID
   26            | ID . COMMA import
   27            | ID . COMMA ID DOT ID
   28            | ID . COMMA ID
   31 import: ID . DOT ID DOT ID

    CLASS  shift, and go to state 2
    ID     shift, and go to state 3
    COMMA  shift, and go to state 34
    DOT    shift, and go to state 35

    class_decl  go to state 36
    class_h     go to state 8


state 10

    4 unit: IMPORT import_list . class_decl
   20 import_list: import_list . COMMA import
   22            | import_list . COMMA ID DOT ID
   23            | import_list . COMMA ID

    CLASS  shift, and go to state 2
    ID     shift, and go to state 3
    COMMA  shift, and go to state 37

    class_decl  go to state 38
    class_h     go to state 8


state 11

   29 import_list: import .
   30 import: import . DOT ID

    DOT  shift, and go to state 39

    $default  reduce using rule 29 (import_list)


state 12

    9 class_h: CLASS ID . SEMI_COLUMN
   10        | CLASS ID . OPEN_S CLOSE_S SEMI_COLUMN
   11        | CLASS ID . OPEN_S inherted_list CLOSE_S SEMI_COLUMN
   15        | CLASS ID .

    SEMI_COLUMN  shift, and go to state 40
    OPEN_S       shift, and go to state 41

    $default  reduce using rule 15 (class_h)


state 13

   12 class_h: CLASS SEMI_COLUMN .

    $default  reduce using rule 12 (class_h)


state 14

   13 class_h: ID ID . SEMI_COLUMN

    SEMI_COLUMN  shift, and go to state 42


state 15

   14 class_h: ID SEMI_COLUMN .

    $default  reduce using rule 14 (class_h)


state 16

    0 $accept: program $end .

    $default  accept


state 17

    1 program: units DOT .

    $default  reduce using rule 1 (program)


state 18

    2 units: units unit .

    $default  reduce using rule 2 (units)


state 19

   13 class_h: ID . ID SEMI_COLUMN
   14        | ID . SEMI_COLUMN
   41 var_declaration: ID .
   43                | ID . ASSIGN expr
   45                | ID . ID
   49 method_h: ID . OPEN_S args_list CLOSE_S SEMI_COLUMN
   50         | ID . OPEN_S ID CLOSE_S SEMI_COLUMN
   52         | ID . OPEN_S CLOSE_S SEMI_COLUMN

    ID           shift, and go to state 43
    SEMI_COLUMN  shift, and go to state 15
    ASSIGN       shift, and go to state 44
    OPEN_S       shift, and go to state 45

    $default  reduce using rule 41 (var_declaration)


state 20

   32 class_body: END .

    $default  reduce using rule 32 (class_body)


state 21

   35 dm_list: DEF . dm

    CLASS      shift, and go to state 2
    ID         shift, and go to state 19
    PRIVATE    shift, and go to state 22
    PUBLIC     shift, and go to state 23
    PROTECTED  shift, and go to state 24
    OPEN_S     shift, and go to state 25

    class_decl          go to state 26
    class_h             go to state 8
    dm                  go to state 46
    var_declaration     go to state 30
    method_declaration  go to state 31
    method_h            go to state 32
    access_modef        go to state 33


state 22

  148 access_modef: PRIVATE .

    $default  reduce using rule 148 (access_modef)


state 23

  149 access_modef: PUBLIC .

    $default  reduce using rule 149 (access_modef)


state 24

  150 access_modef: PROTECTED .

    $default  reduce using rule 150 (access_modef)


state 25

   54 method_h: OPEN_S . args_list CLOSE_S SEMI_COLUMN

    ID    shift, and go to state 47
    STAR  shift, and go to state 48

    args_list  go to state 49
    arg        go to state 50


state 26

   39 dm: class_decl .

    $default  reduce using rule 39 (dm)


state 27

    8 class_decl: class_h class_body .

    $default  reduce using rule 8 (class_decl)


state 28

   33 class_body: dm_list . END
   34 dm_list: dm_list . DEF dm

    END  shift, and go to state 51
    DEF  shift, and go to state 52


state 29

   36 dm_list: dm .

    $default  reduce using rule 36 (dm_list)


state 30

   37 dm: var_declaration .

    $default  reduce using rule 37 (dm)


state 31

   38 dm: method_declaration .

    $default  reduce using rule 38 (dm)


state 32

   46 method_declaration: method_h . block_stmt

    _BEGIN  shift, and go to state 53

    block_stmt  go to state 54


state 33

   40 var_declaration: access_modef . ID
   42                | access_modef . ID ASSIGN expr
   44                | access_modef . ID ID
   47 method_h: access_modef . ID OPEN_S args_list CLOSE_S SEMI_COLUMN
   48         | access_modef . ID OPEN_S ID CLOSE_S SEMI_COLUMN
   51         | access_modef . ID OPEN_S CLOSE_S SEMI_COLUMN
   53         | access_modef . OPEN_S args_list CLOSE_S SEMI_COLUMN
   55         | access_modef . ID args_list CLOSE_S SEMI_COLUMN
   56         | access_modef . ID OPEN_S args_list SEMI_COLUMN
   57         | access_modef . ID OPEN_S args_list CLOSE_S

    ID      shift, and go to state 55
    OPEN_S  shift, and go to state 56


state 34

   26 import_list: ID COMMA . import
   27            | ID COMMA . ID DOT ID
   28            | ID COMMA . ID

    ID  shift, and go to state 57

    import  go to state 58


state 35

    6 unit: IMPORT ID DOT . ID class_decl
   21 import_list: ID DOT . ID COMMA import
   24            | ID DOT . ID COMMA ID DOT ID
   25            | ID DOT . ID COMMA ID
   31 import: ID DOT . ID DOT ID

    ID  shift, and go to state 59


state 36

    5 unit: IMPORT ID class_decl .

    $default  reduce using rule 5 (unit)


state 37

   20 import_list: import_list COMMA . import
   22            | import_list COMMA . ID DOT ID
   23            | import_list COMMA . ID

    ID  shift, and go to state 60

    import  go to state 61


state 38

    4 unit: IMPORT import_list class_decl .

    $default  reduce using rule 4 (unit)


state 39

   30 import: import DOT . ID

    ID  shift, and go to state 62


state 40

    9 class_h: CLASS ID SEMI_COLUMN .

    $default  reduce using rule 9 (class_h)


state 41

   10 class_h: CLASS ID OPEN_S . CLOSE_S SEMI_COLUMN
   11        | CLASS ID OPEN_S . inherted_list CLOSE_S SEMI_COLUMN

    ID       shift, and go to state 63
    CLOSE_S  shift, and go to state 64

    inherted_list  go to state 65


state 42

   13 class_h: ID ID SEMI_COLUMN .

    $default  reduce using rule 13 (class_h)


state 43

   13 class_h: ID ID . SEMI_COLUMN
   45 var_declaration: ID ID .

    SEMI_COLUMN  shift, and go to state 42

    $default  reduce using rule 45 (var_declaration)


state 44

   43 var_declaration: ID ASSIGN . expr

    ID             shift, and go to state 66
    CHAR_VALUE     shift, and go to state 67
    STRING_VALUE   shift, and go to state 68
    INTEGER_VALUE  shift, and go to state 69
    LONG_VALUE     shift, and go to state 70
    FLOAT_VALUE    shift, and go to state 71

    literal    go to state 72
    expr       go to state 73
    condition  go to state 74
    long_id    go to state 75


state 45

   49 method_h: ID OPEN_S . args_list CLOSE_S SEMI_COLUMN
   50         | ID OPEN_S . ID CLOSE_S SEMI_COLUMN
   52         | ID OPEN_S . CLOSE_S SEMI_COLUMN

    ID       shift, and go to state 76
    CLOSE_S  shift, and go to state 77
    STAR     shift, and go to state 48

    args_list  go to state 78
    arg        go to state 50


state 46

   35 dm_list: DEF dm .

    $default  reduce using rule 35 (dm_list)


state 47

   59 args_list: ID . COMMA arg
   61          | ID . COMMA ID
   64 arg: ID . ASSIGN expr

    COMMA   shift, and go to state 79
    ASSIGN  shift, and go to state 80


state 48

   63 arg: STAR . ID
   65    | STAR . ID ASSIGN expr

    ID  shift, and go to state 81


state 49

   54 method_h: OPEN_S args_list . CLOSE_S SEMI_COLUMN
   58 args_list: args_list . COMMA arg
   60          | args_list . COMMA ID

    CLOSE_S  shift, and go to state 82
    COMMA    shift, and go to state 83


state 50

   62 args_list: arg .

    $default  reduce using rule 62 (args_list)


state 51

   33 class_body: dm_list END .

    $default  reduce using rule 33 (class_body)


state 52

   34 dm_list: dm_list DEF . dm

    CLASS      shift, and go to state 2
    ID         shift, and go to state 19
    PRIVATE    shift, and go to state 22
    PUBLIC     shift, and go to state 23
    PROTECTED  shift, and go to state 24
    OPEN_S     shift, and go to state 25

    class_decl          go to state 26
    class_h             go to state 8
    dm                  go to state 84
    var_declaration     go to state 30
    method_declaration  go to state 31
    method_h            go to state 32
    access_modef        go to state 33


state 53

   66 block_stmt: _BEGIN . END
   67           | _BEGIN . stmt_list END

    ID             shift, and go to state 85
    _BEGIN         shift, and go to state 53
    END            shift, and go to state 86
    IF             shift, and go to state 87
    WHILE          shift, and go to state 88
    FOR            shift, and go to state 89
    TRY            shift, and go to state 90
    WITH           shift, and go to state 91
    ASSERT         shift, and go to state 92
    DEL            shift, and go to state 93
    RETURN         shift, and go to state 94
    PRINT          shift, and go to state 95
    GLOBAL         shift, and go to state 96
    RAISE          shift, and go to state 97
    OPEN_D         shift, and go to state 98
    RE_COT         shift, and go to state 99
    YIELD          shift, and go to state 100
    PRIMARY        shift, and go to state 101
    PASS           shift, and go to state 102
    CHAR_VALUE     shift, and go to state 67
    OPEN_S         shift, and go to state 103
    STRING_VALUE   shift, and go to state 68
    INTEGER_VALUE  shift, and go to state 69
    BREAK          shift, and go to state 104
    CONTINUE       shift, and go to state 105
    LONG_VALUE     shift, and go to state 70
    FLOAT_VALUE    shift, and go to state 71

    expr_list          go to state 106
    import_list        go to state 107
    import             go to state 11
    block_stmt         go to state 108
    stmt_list          go to state 109
    stmt               go to state 110
    if_stmt            go to state 111
    if_header          go to state 112
    while_stmt         go to state 113
    while_header       go to state 114
    for_stmt           go to state 115
    for_header         go to state 116
    target_list        go to state 117
    try_stmt           go to state 118
    with_stmt          go to state 119
    simple_stmt_list   go to state 120
    assert_stmt        go to state 121
    assignment_stmt    go to state 122
    del_stmt           go to state 123
    return_stmt        go to state 124
    yield_stmt         go to state 125
    print_stmt         go to state 126
    global_stmt        go to state 127
    raise_stmt         go to state 128
    target             go to state 129
    attributeref       go to state 130
    primary            go to state 131
    atom               go to state 132
    literal            go to state 133
    enclosure          go to state 134
    parenth_form       go to state 135
    list_display       go to state 136
    string_conversion  go to state 137
    yield_atom         go to state 138
    yield_expression   go to state 139
    subscription       go to state 140
    call               go to state 141
    expr               go to state 142
    condition          go to state 74
    long_id            go to state 75


state 54

   46 method_declaration: method_h block_stmt .

    $default  reduce using rule 46 (method_declaration)


state 55

   40 var_declaration: access_modef ID .
   42                | access_modef ID . ASSIGN expr
   44                | access_modef ID . ID
   47 method_h: access_modef ID . OPEN_S args_list CLOSE_S SEMI_COLUMN
   48         | access_modef ID . OPEN_S ID CLOSE_S SEMI_COLUMN
   51         | access_modef ID . OPEN_S CLOSE_S SEMI_COLUMN
   55         | access_modef ID . args_list CLOSE_S SEMI_COLUMN
   56         | access_modef ID . OPEN_S args_list SEMI_COLUMN
   57         | access_modef ID . OPEN_S args_list CLOSE_S

    ID      shift, and go to state 143
    ASSIGN  shift, and go to state 144
    STAR    shift, and go to state 48
    OPEN_S  shift, and go to state 145

    $default  reduce using rule 40 (var_declaration)

    args_list  go to state 146
    arg        go to state 50


state 56

   53 method_h: access_modef OPEN_S . args_list CLOSE_S SEMI_COLUMN

    ID    shift, and go to state 47
    STAR  shift, and go to state 48

    args_list  go to state 147
    arg        go to state 50


state 57

   27 import_list: ID COMMA ID . DOT ID
   28            | ID COMMA ID .
   31 import: ID . DOT ID DOT ID

    DOT  shift, and go to state 148

    $default  reduce using rule 28 (import_list)


state 58

   26 import_list: ID COMMA import .
   30 import: import . DOT ID

    DOT  shift, and go to state 39

    $default  reduce using rule 26 (import_list)


state 59

    6 unit: IMPORT ID DOT ID . class_decl
   21 import_list: ID DOT ID . COMMA import
   24            | ID DOT ID . COMMA ID DOT ID
   25            | ID DOT ID . COMMA ID
   31 import: ID DOT ID . DOT ID

    CLASS  shift, and go to state 2
    ID     shift, and go to state 3
    COMMA  shift, and go to state 149
    DOT    shift, and go to state 150

    class_decl  go to state 151
    class_h     go to state 8


state 60

   22 import_list: import_list COMMA ID . DOT ID
   23            | import_list COMMA ID .
   31 import: ID . DOT ID DOT ID

    DOT  shift, and go to state 152

    $default  reduce using rule 23 (import_list)


state 61

   20 import_list: import_list COMMA import .
   30 import: import . DOT ID

    DOT  shift, and go to state 39

    $default  reduce using rule 20 (import_list)


state 62

   30 import: import DOT ID .

    $default  reduce using rule 30 (import)


state 63

   17 inherted_list: ID .

    $default  reduce using rule 17 (inherted_list)


state 64

   10 class_h: CLASS ID OPEN_S CLOSE_S . SEMI_COLUMN

    SEMI_COLUMN  shift, and go to state 153


state 65

   11 class_h: CLASS ID OPEN_S inherted_list . CLOSE_S SEMI_COLUMN
   16 inherted_list: inherted_list . COMMA ID

    CLOSE_S  shift, and go to state 154
    COMMA    shift, and go to state 155


state 66

  199 long_id: ID . OPEN_S
  200        | ID . OPEN_S CLOSE_S
  201        | ID . OPEN_S expr_list CLOSE_S
  202        | ID . OPEN_S expr CLOSE_S

    OPEN_S  shift, and go to state 156


state 67

  171 literal: CHAR_VALUE .

    $default  reduce using rule 171 (literal)


state 68

  167 literal: STRING_VALUE .

    $default  reduce using rule 167 (literal)


state 69

  168 literal: INTEGER_VALUE .

    $default  reduce using rule 168 (literal)


state 70

  169 literal: LONG_VALUE .

    $default  reduce using rule 169 (literal)


state 71

  170 literal: FLOAT_VALUE .

    $default  reduce using rule 170 (literal)


state 72

  190 expr: literal .

    $default  reduce using rule 190 (expr)


state 73

   43 var_declaration: ID ASSIGN expr .
  191 expr: expr . op expr
  193 condition: expr . EQUAL expr
  194          | expr . NOT_EQUAL expr
  195          | expr . LESS_THAN expr
  196          | expr . LESS_OR_EQUAL expr
  197          | expr . MORE_THAN expr
  198          | expr . MORE_OR_EQUAL expr
